--- a/May-Notebook.Rmd
+++ b/May-Notebook.Rmd
@@ -22,9 +22,10 @@ names(kk.long)
 
 --
 
-# 2. Z-score densities within each (CHANNEL, SUBROI) across all animals
+# 2. Z-score densities within each (CHANNEL, SUBROI) aross all animals
 
-```{r scaled, echo=FALSE, fig.width=8, fig.height=8}
+```{r scaled, echo=FALSE, fig.width=8, fig.height=6}
+
 kl2 = kk.long
 kl2.scale = ddply(kl2, .(CHANNEL, SUBROI), transform, z = scale(DENSITY))
 
@@ -32,30 +33,30 @@ ggplot(kl2.scale) + aes(SUBROI, GRAIN, fill = z) +
   geom_tile() + rx +
   scale_fill_gradient2(low="black", mid = "white", high="red") +
   facet_wrap(~CHANNEL, ncol=1) +
-  ggtitle("Densities, z-scored per ROI")
+  ggtitle("Densities per channel, z-scored per ROI")
+
 
 ```
 
 
 
-## 2.1 But what if we want to cluster them? 
+# 3. Clustered heatmap of correlations
 
-
-
-# 3. Density Correlation in each ROI, with hierarchical clustering
-
-
-```{r, fig.width=10, fig.height=10}
+```{r, fig.width=8, fig.height=8}
 library(corrplot)
 
+# Borrow from kl2 scale
 df2 = kl2.scale
 
+# New variable called the CHANNEL+SUBROI
 df2$GRAIN2 = paste(df2$CHANNEL, df2$SUBROI) 
-df2b = df2 %>% filter(CHANNEL=="OL" | CHANNEL=='H2BGFP')
-df3 = dcast(df2b, GRAIN ~ GRAIN2, value.var="z", fun.aggregate = mean)
 
-df3.cor = cor(df3[,2:73], df3[,74:145])
-corrplot(df3.cor, method="color", order="hclust")
+
+df2b = df2 %>% filter(CHANNEL=="OL" | CHANNEL=='H2BGFP')
+# df3 = dcast(df2b, GRAIN ~ GRAIN2, value.var="z", fun.aggregate = mean)
+# 
+# df3.cor = cor(df3[,2:73], df3[,74:145])
+# corrplot(df3.cor, method="color", order="hclust")
 
 # df.corr1 = dcast(kl2.scale, VALENCE+SUBROI ~ CHANNEL, value.var="z", fun.aggregate = mean)
 # df.corr1 = df.corr1[,c(-1)]
@@ -65,14 +66,11 @@ heat.roi = function(df, ch1, ch2) {
   temp.df = dcast(temp.df1, GRAIN ~ GRAIN2, value.var="z", fun.aggregate = mean)
   
   cor1 = cor(temp.df[,2:73], temp.df[,74:145])
-  corrplot(cor1, method="color", order="hclust")
+  corrplot(cor1, method="color", order="hclust", title=paste("ROI Correlations", ch1, ch2))
 }
 
-heat.roi(df2, "H2BGFP", "ArcIHC")
-
-df3[,74:145] %>% correlate() %>% network_plot(colors=c("red", "red","white","white","blue"))
-df3[,2:73] %>% correlate() %>% network_plot(colors=c("red", "red","white","white","blue"))
-
+heat.roi(df2, "H2BGFP", "ArcIHC") 
+heat.roi(df2, "H2BGFP", "OL")
 
 ```
 
@@ -115,7 +113,6 @@ ggplot(data = sc1.molten,
     theme(axis.text.x = element_text(angle = 90, hjust = 1),
           axis.text.y = element_blank()) + 
     ggtitle("Clustered ggplot heatmap")
-
 
 
 ```
