--- a/April-Notebook.Rmd
+++ b/April-Notebook.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "AGE 10 series - April Explorations"
 output:
-  html_notebook: default
   html_document: default
+  html_notebook: default
   pdf_document: default
 ---
 
@@ -29,6 +29,9 @@ kkl.collapseROI = kk.long %>%
   summarize(sem = std.error(DENSITY), mean_density = mean(DENSITY), N = length(DENSITY),
             ymin = mean_density-sem, ymax = mean_density+sem)
 kkl.collapseROI
+
+# normalize
+
 
 ggplot(kkl.collapseROI) + aes(GROUP, mean_density, fill=EXPT, color = EXPT) + 
   facet_wrap(~CHANNEL, scales="free") +
@@ -145,8 +148,6 @@ ggplot(kk.long %>% filter(EXPT=="OLD")) +
   rx +
   ggtitle("OLD ANIMALS")
 
-
-
 ```
 
 # Density comparisons between young/old
@@ -155,20 +156,39 @@ ggplot(kk.long %>% filter(EXPT=="OLD")) +
 
 ggplot(kk.long %>% filter(VALENCE=="SHOCK")) +
   aes(x=reorder(SUBROI, DENSITY), y=DENSITY, color=EXPT) +
-  facet_wrap(CHANNEL~CONTEXT, ncol=2, scales="free") +
       stat_summary(fun.y = mean, geom="point") +
       stat_summary(fun.data = mean_se, geom="linerange") +
+  facet_wrap(CHANNEL~CONTEXT, ncol=2, scales="free") +
   rx +
   ggtitle("SHOCK ANIMALS")
 
-
 ggplot(kk.long %>% filter(VALENCE=="CONTEXT")) +
   aes(x=reorder(SUBROI, DENSITY), y=DENSITY, color=EXPT) +
-  facet_wrap(CHANNEL~CONTEXT, ncol=2, scales="free") +
       stat_summary(fun.y = mean, geom="point") +
       stat_summary(fun.data = mean_se, geom="linerange") +
+  facet_wrap(CHANNEL~CONTEXT, ncol=2, scales="free") +
   rx +
   ggtitle("CONTEXT ANIMALS")
+
+
+```
+
+
+# Now suppose I scaled the previous within-ROI
+```{r, fig.height = 10, fig.width=10}
+
+# z-scored DF
+df.zroi = ddply(kk.long, .(CHANNEL, SUBROI), transform, z = scale(DENSITY))
+
+# plot
+ggplot(df.zroi) + aes(SUBROI, z) + 
+  stat_summary(fun.y = mean, geom="point") + 
+  stat_summary(fun.data = mean_se, geom="linerange") + 
+  geom_hline(yintercept=0) + 
+  theme(axis.text.x = element_text(angle = 90, hjust=1)) +
+  facet_wrap(VALENCE~CHANNEL ,ncol = 2)
+  
+
 
 
 ```
@@ -201,8 +221,8 @@ ggplot(t) +
 - Positive numbers mean more overlap in AA than in AB group, vice versa. 
 
 ```{r, echo=F, fig.width = 4, fig.height = 3, message=FALSE, warning=FALSE}
-
-ol.induction = plyr::ddply(kk.long, .(CHANNEL, BATCH), transform, norm = scale(DENSITY))
+library(plyr)
+ol.induction = ddply(kk.long, .(CHANNEL, BATCH), transform, norm = scale(DENSITY))
 ol.induction = dcast(ol.induction, CHANNEL + SUBROI + EXPT + VALENCE ~ CONTEXT,
                         value.var = "norm", fun.aggregate = mean)
 ol.induction$DIFFNORM = ol.induction$AA - ol.induction$AB
@@ -223,21 +243,21 @@ ggplot(ol.induction %>% filter(CHANNEL=="GFAP")) +
 # check the straight up intensity levels to find non-transgenics
 
 ```{r, fig.width = 6, fig.height = 8}
-rx = theme(axis.text.x = element_text(angle = 90, hjust = 1))
-
-raw$ID = as.factor(raw$ID)
-
-ggplot(raw) + aes(reorder(ID, Ch3.Mean.), Ch3.Mean.) + geom_boxplot() +rx + facet_wrap(~Z.Level.) +
-  ggtitle("GFAP intensity")
-
-ggplot(raw) + aes(reorder(ID, Ch4.Mean.), Ch4.Mean.) + geom_boxplot() +rx + facet_wrap(~Z.Level.) +
-  ggtitle("ArcIHC intensity") 
-
-ggplot(raw) + aes(reorder(ID, Ch2.Mean.), Ch2.Mean.) + geom_violin() +facet_wrap(~Z.Level.) +
-  ggtitle("H2B intensity") + coord_flip() + rx + ylim(0,10000)
-
-ggplot(raw) + aes(reorder(ID, Ch1.Mean.), Ch1.Mean.) + geom_violin() +rx + facet_wrap(~Z.Level.) +
-  ggtitle("DAPI intensity")
+# rx = theme(axis.text.x = element_text(angle = 90, hjust = 1))
+# 
+# raw$ID = as.factor(raw$ID)
+# 
+# ggplot(raw) + aes(reorder(ID, Ch3.Mean.), Ch3.Mean.) + geom_boxplot() +rx + facet_wrap(~Z.Level.) +
+#   ggtitle("GFAP intensity")
+# 
+# ggplot(raw) + aes(reorder(ID, Ch4.Mean.), Ch4.Mean.) + geom_boxplot() +rx + facet_wrap(~Z.Level.) +
+#   ggtitle("ArcIHC intensity") 
+# 
+# ggplot(raw) + aes(reorder(ID, Ch2.Mean.), Ch2.Mean.) + geom_violin() +facet_wrap(~Z.Level.) +
+#   ggtitle("H2B intensity") + coord_flip() + rx + ylim(0,10000)
+# 
+# ggplot(raw) + aes(reorder(ID, Ch1.Mean.), Ch1.Mean.) + geom_violin() +rx + facet_wrap(~Z.Level.) +
+#   ggtitle("DAPI intensity")
 
 ```
 
