--- a/May-Notebook.Rmd
+++ b/May-Notebook.Rmd
@@ -38,7 +38,7 @@ ggplot(kl2.scale) + aes(SUBROI, GRAIN, fill = z) +
 
 ```
 
-
+--
 
 # 3. Clustered heatmap of correlations
 
@@ -50,16 +50,7 @@ df2 = kl2.scale
 
 # New variable called the CHANNEL+SUBROI
 df2$GRAIN2 = paste(df2$CHANNEL, df2$SUBROI) 
-
-
-df2b = df2 %>% filter(CHANNEL=="OL" | CHANNEL=='H2BGFP')
-# df3 = dcast(df2b, GRAIN ~ GRAIN2, value.var="z", fun.aggregate = mean)
-# 
-# df3.cor = cor(df3[,2:73], df3[,74:145])
-# corrplot(df3.cor, method="color", order="hclust")
-
-# df.corr1 = dcast(kl2.scale, VALENCE+SUBROI ~ CHANNEL, value.var="z", fun.aggregate = mean)
-# df.corr1 = df.corr1[,c(-1)]
+df3 = dcast(df2, GRAIN ~ GRAIN2, value.var = "z", fun.aggregate = mean)
 
 heat.roi = function(df, ch1, ch2) {
   temp.df1 = df %>% filter(CHANNEL==ch1 | CHANNEL==ch2)
@@ -71,10 +62,29 @@ heat.roi = function(df, ch1, ch2) {
 
 heat.roi(df2, "H2BGFP", "ArcIHC") 
 heat.roi(df2, "H2BGFP", "OL")
+heat.roi(df2, "ArcIHC", "OL")
+heat.roi(df2, "DAPI", "OL")
 
 ```
 
+--
+# 4. Network plots
+```{r, fig.width=8, fig.height=8}
+library(corrr)
 
+for (each in channel.list) {
+  print(
+    df2 %>%
+      filter(CHANNEL==each) %>%
+      dcast(GRAIN ~ GRAIN2, value.var="z", fun.aggregate = mean) %>%
+      select(-1) %>%
+      correlate() %>%
+      network_plot(color=c("red", "white", "white", "white", "dark blue"))
+  )
+}
+  
+
+```
 
 ## Dendrogram
 
@@ -138,8 +148,3 @@ print(dendro.sc1.p, vp = viewport(x = 0.90, y = 0.5, width = 0.4, height = 2.06)
 
 
 ```
-
-
-
-
-
