Added processing kk's data

--- a/June2018.Rmd
+++ b/June2018.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "R Notebook"
+title: "June 2018 AGE analysis"
 output: html_notebook
 ---
 
@@ -10,21 +10,125 @@ The purpose of this notebook is to compile all of the analyses that I have done 
 
 ## Loading the data
 
-*Sourcing the data*
+**Sourcing the data**
 This script intakes the csv files of all the RAW data straight from Kiriana's macro. Then, from a list of files that should be excluded (on the basis of bad atlas alignment or bad images in general), these files are flagged as "to be excluded" from the imported dataset. After they have been excluded, we add back in the raw data of the files that have been revised (e.g., a file that has been excluded because of the bad atlas alignment was fixed and was then reanalyzed with the proper atlas section). Revised data and the non-excluded data were combined into a new dataframe, and animal details were then merged in. 
 
-*Output: *
-dataframes
+**Output: **
+*dataframes*
 - raw0 = the raw data imported, then flagged with exclusions
 - ex = list of files that were flagged to be removed
 - rev = raw data of the files that were fixed
 - raw_revised = combination of revised data + non-excluded data
 - raw = same as raw_revised, just a simpler name for typing
-- animal_details = information about GROUP, AGE, DOB, etc. 
+- animal_details = information about GROUP, AGE, DOB, analysis rounds, etc. 
 
 
 ```{r}
+source("LoadLibs.R")
 source("LoadProcessRAW-May2018.R")
+
+```
+
+
+
+```{r, fig.height=8}
+attach(raw.z1)
+ggplot(raw.z1) + aes(GROUP, OL.Total., color=EXPT) + 
+  stat_summary(fun.y = mean, geom="point") +
+  stat_summary(fun.data=mean_se, geom="linerange") +
+  facet_wrap(~Sub.ROI., scales="free")
+
+
+```
+
+
+
+
+
+
+
+
+
+# Part II. After processing through Matlab (KK)
+
+```{r}
+
+knew = read.csv("SubroiAGGR.csv")
+colnames(knew)[1] = "ID"
+
+knew = knew %>% filter(! ID %in% c("8351", "8352"))
+
+# Melt the data
+knew.molten = melt(knew, id.vars = names(knew)[c(1:13, 34:39)])
+
+# Display the variable levels
+levels(knew.molten$variable)
+
+    
+# Combine all the transformations
+
+knew.molten = melt(knew, id.vars = names(knew)[c(1:13, 34:39)])
+units.counts = levels(knew.molten$variable)[c(1:20,41:60)]
+units.density = levels(knew.molten$variable)[c(21:40)]
+
+knew.molten = knew.molten %>%
+  mutate(UNITS = ifelse(variable %in% units.counts, "counts", "density"))
+
+normalized.yes = levels(knew.molten$variable)[41:60]
+knew.molten = knew.molten %>%
+  mutate(NORMD = ifelse(variable %in% normalized.yes, "yes", "no"))
+
+brightness.low = levels(knew.molten$variable)[seq(1,60,4)]
+brightness.mid = levels(knew.molten$variable)[seq(2,60,4)]
+brightness.hi = levels(knew.molten$variable)[seq(3,60,4)]
+brightness.total = levels(knew.molten$variable)[seq(4,60,4)]
+
+knew.molten = knew.molten %>%
+  mutate(BRIGHTNESS = 
+           case_when(
+             variable %in% brightness.low ~ "low",
+             variable %in% brightness.mid ~ "mid",
+             variable %in% brightness.hi ~ "hi",
+             variable %in% brightness.total ~ "total"
+           ))
+
+chan1 = levels(knew.molten$variable)[grep("Ch1", levels(knew.molten$variable))]
+chan2 = levels(knew.molten$variable)[grep("Ch2", levels(knew.molten$variable))]
+chan3 = levels(knew.molten$variable)[grep("Ch3", levels(knew.molten$variable))]
+chan4 = levels(knew.molten$variable)[grep("Ch4", levels(knew.molten$variable))]
+chan5 = levels(knew.molten$variable)[grep("OL", levels(knew.molten$variable))]
+
+knew.molten = knew.molten %>%
+  mutate(CHANNEL = 
+           case_when(
+             variable %in% chan1 ~ "DAPI",
+             variable %in% chan2 ~ "H2BGFP",
+             variable %in% chan3 ~ "GFAP",
+             variable %in% chan4 ~ "ArcIHC",
+             variable %in% chan5 ~ "OL"
+           ))
+knew.molten$CHANNEL = as.factor(knew.molten$CHANNEL)
+
+
+# Rename the EXPT details
+knew.molten = knew.molten %>%
+  mutate(EXPT = 
+           case_when(
+             EXPT == 11 ~ "OLD",
+             EXPT == 10 ~ "YOUNG"
+           ))
+knew.molten$GRAIN = paste(knew$EXPT, knew$GROUP)
+
+
+rx = theme(axis.text.x = element_text(angle = 90, hjust = 1)) 
+channel.list = c("DAPI", "H2BGFP", "ArcIHC", "GFAP", "OL", "NormOL")
+
+```
+
+```{r}
+batch_details = read.csv("batch_details.csv")
+knew.molten = merge(knew.molten, batch_details, by="GRAIN")
+
 
 ```
 
