--- a/June2018 - Post-Matlab.Rmd
+++ b/June2018 - Post-Matlab.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "June 2018 post-matlab"
+title: "R Notebook"
 output: html_notebook
 ---
 
 # Post matlab stuff
 
-```{r}
+```{r, eval=FALSE}
 source("LoadLibs.R")
 source("LoadProcessZ1New.R")
 attach(knew.molten)
@@ -18,19 +18,16 @@ names(group_details)[1] = "GROUP"
 knew.molten2 = merge(knew.molten, freeze_details, by="ID")
 knew.molten2 = merge(knew.molten2, group_details, by="GROUP")
 
-
 ```
 
 
 
+# TOTAL brain, weighted average by ROI
 
-
-
-# Calculate the weighted counts for whole brain
-## Point-range graphs
+## Point-range graphs for each of the threshold levels
+From the rest of the graphs, we ended up choosing the total cells. 
 ```{r}
 
-# density, weight by ROI area, EACH BRIGHTNESS
 for (bright in c('low', 'mid', 'hi', 'total')) {
   print(
     knew.molten2 %>%
@@ -40,71 +37,303 @@ for (bright in c('low', 'mid', 'hi', 'total')) {
       summarize(weighted = weighted.mean(value, ROIAreapx)) %>%
       ggplot() + aes(GROUP, weighted, color=EXPT) + 
       stat_summary(fun.y = "mean", geom="point") + 
-      stat_summary(fun.data = "mean_se", geom="linerange") + 
+      stat_summary(fun.data = "mean_se", geom="errorbar", aes(width=0.3)) + 
       facet_wrap(~CHANNEL, scales="free") + 
-      ggtitle(paste(c("Whole brain, weighted, density"),bright,"cells"))
+      ggtitle(paste(c("Whole brain, weighted, density"),bright,"cells")) +
+      theme_minimal() 
   )
 }
-
-# counts normalized, weight by ROI area, EACH BRIGHTNESS
-for (bright in c('low', 'mid', 'hi', 'total')) {
-  print(
-    knew.molten2 %>%
-      filter(UNITS == "counts") %>%
-      filter(NORMD == 'yes') %>%
-      filter(BRIGHTNESS == bright) %>%
-      group_by(ID, GROUP, EXPT, CHANNEL, variable) %>%
-      summarize(weighted = weighted.mean(value, ROIAreapx)) %>%
-      ggplot() + aes(GROUP, weighted, color=EXPT) + 
-      stat_summary(fun.y = "mean", geom="point") + 
-      stat_summary(fun.data = "mean_se", geom="linerange") + 
-      facet_wrap(~CHANNEL, scales="free") + 
-      ggtitle(paste(c("Whole brain, weighted, counts"),bright,"cells"))
-  )
-}
-
-
 ```
 
-## Heatmaps
+## Linear regressions (total brain)
 ```{r}
-
+# shock lin reg
 knew.molten2 %>%
-  ddply(.(EXPT, GROUP, CHANNEL), transform, z = scale(value)) %>%
-  ggplot() + aes(GROUP, EXPT, z=z, fill=z) +
-  geom_tile() + scale_fill_gradient2(low='dark blue', mid='white', high='red') +
-  facet_wrap(~CHANNEL)
-  
+  filter(UNITS == "density") %>%
+  filter(BRIGHTNESS == 'total') %>%
+  filter(VALENCE == 'SHOCK') %>%
+  group_by(ID, FREEZE,GROUP, EXPT, CHANNEL, variable) %>%
+  summarize(weighted = weighted.mean(value, ROIAreapx)) %>%
+  ggplot() + aes(FREEZE, weighted) + 
+  stat_summary(fun.y="mean", geom="point") +
+  facet_wrap(EXPT~CHANNEL, scales="free", ncol=6) + geom_smooth(method="lm") +
+  ggtitle("Total brain density vs freezing, total cells, shock animals only") +
+  theme_minimal()
 
+# all animals lin reg
+knew.molten2 %>%
+  filter(UNITS == "density") %>%
+  filter(BRIGHTNESS == 'total') %>%
+  group_by(ID, FREEZE,GROUP, EXPT, CHANNEL, variable) %>%
+  summarize(weighted = weighted.mean(value, ROIAreapx)) %>%
+  ggplot() + aes(FREEZE, weighted) + 
+  stat_summary(fun.y="mean", geom="point") +
+  facet_wrap(EXPT~CHANNEL, scales="free", ncol=6) + geom_smooth(method="lm") +
+  ggtitle("Total brain density vs freezing, total cells, ALL animals") +
+  theme_minimal()
+
+```
+## Stats for linear regressions
+```{r}
+ # GET THE STATS
+tot.lr = knew.molten2 %>%
+  filter(UNITS == "density") %>%
+  filter(BRIGHTNESS == 'total') %>%
+  filter(VALENCE == 'SHOCK') %>%
+  # filter(!(EXPT =='YOUNG' & CONTEXT=='AA' & VALENCE == 'SHOCK' & FREEZE < 30)) %>% # removes young bad freezers
+  
+  group_by(CHANNEL, EXPT, GROUP, ID, FREEZE) %>%
+  summarize(weighted = weighted.mean(value, ROIAreapx)) %>%
+  
+  group_by(CHANNEL, EXPT) %>%
+  do(tidy(lm(data=., formula = weighted ~ FREEZE))) %>%
+  filter(!term=="(Intercept)") %>%
+  mutate(p.value = p.adjust(p.value, method="bonferroni", n=6)) %>%
+  mutate(sig = 
+           case_when(
+             p.value < 0.0005 ~ "***",
+             p.value < 0.005 ~ "**", 
+             p.value < 0.05 ~ "*"
+           ))
+
+
+# positive or negative
+tot.lr %>%
+  filter(CHANNEL %in% c("H2BGFP","NormOL", "ArcIHC")) %>% # omit DAPI/OL/GFAP channels for clarity
+  # dcast(., CHANNEL+EXPT ~ System, value.var="sig") %>%
+  ggplot() + aes(EXPT, CHANNEL, fill=estimate/abs(estimate), label=round(estimate,0)) + geom_tile() +
+  scale_fill_continuous(limits=c(-1,1), low="red", high="green", na.value="white") + 
+  ggtitle("Slopes from linear regression (red is negative)") +
+  theme_light()
+
+# P VALUES
+tot.lr %>%
+  filter(CHANNEL %in% c("H2BGFP","NormOL", "ArcIHC")) %>% # omit DAPI/OL/GFAP channels for clarity
+  # dcast(., CHANNEL+EXPT ~ System, value.var="sig") %>%
+  ggplot() + aes(EXPT, CHANNEL, fill=p.value, label=sig) + geom_tile() +
+  scale_fill_continuous(limits=c(0,0.05), low="dark red", high="white", na.value="white") + 
+  ggtitle("Signifiance scores from linear regression (Bonferroni corrected)") +
+  theme_light() + geom_label(label.size=0, color="white")
 ```
 
 
-# Calculate weighted means for each system
 
-```{r, fig.width=9.5, fig.height=5}
+
+# SYSTEMS analysis 
+
+## Calculate weighted means for each system
+```{r, fig.width=9, fig.height=3}
 
 # systems, weighted by ROI area
-for (bright in c('low', 'mid', 'hi', 'total')) {
-  print(
-    knew.molten2 %>%
-      filter(UNITS == "density") %>%
-      filter(BRIGHTNESS == bright) %>%
-      group_by(ID, System, GROUP, EXPT, CHANNEL, variable) %>%
-      summarize(weighted = weighted.mean(value, ROIAreapx)) %>%
-      ggplot() + aes(GROUP, weighted, color=EXPT) + 
-      stat_summary(fun.y = "mean", geom="point") + 
-      stat_summary(fun.data = "mean_se", geom="linerange") + 
-      facet_wrap(CHANNEL~System, scales="free", ncol=16) + 
-      ggtitle(paste(c("Whole brain, weighted, counts"),bright,"cells"))
-  )
-}
+knew.molten2 %>%
+  filter(CHANNEL %in% channel.list[c(2,3,6)]) %>%
+  filter(UNITS == "density" & BRIGHTNESS == 'total') %>%
+  filter(!(EXPT =='YOUNG' & CONTEXT=='AA' & VALENCE == 'SHOCK' & FREEZE < 30)) %>% # removes young bad freezers
+  group_by(ID, System, GROUP, EXPT, CHANNEL, variable) %>%
+  summarize(weighted = weighted.mean(value, ROIAreapx)) %>%
+  ggplot() + aes(GROUP, weighted, color=EXPT) + 
+  stat_summary(fun.y = "mean", geom="point") + 
+  stat_summary(fun.data = "mean_se", geom="errorbar", aes(width=0.2)) + 
+  facet_wrap(CHANNEL~System, scales="free", ncol=16) + 
+  ggtitle("systems, weighted, density total cells, bad freezers removed") + 
+  theme_light() + rx
 
-# make heatmap
-systems.scaled = systems %>%
-  ddply(.(ID, CHANNEL, System), 
-        transform, z = (scale(value)))
+
+# systems, weighted by ROI area
+knew.molten2 %>%
+  filter(CHANNEL %in% channel.list[c(2,3,6)]) %>%
+  filter(UNITS == "density" & BRIGHTNESS == 'total') %>%
+  # filter(!(EXPT =='YOUNG' & CONTEXT=='AA' & VALENCE == 'SHOCK' & FREEZE < 30)) %>% # removes young bad freezers
+  group_by(ID, System, GROUP, EXPT, CHANNEL, variable) %>%
+  summarize(weighted = weighted.mean(value, ROIAreapx)) %>%
+  ggplot() + aes(GROUP, weighted, color=EXPT) + 
+  stat_summary(fun.y = "mean", geom="point") + 
+  stat_summary(fun.data = "mean_se", geom="errorbar", aes(width=0.2)) + 
+  facet_wrap(CHANNEL~System, scales="free", ncol=16) + 
+  ggtitle("systems, weighted, density total cells, bad freezers NOT removed") + 
+  theme_light() + rx
 
 
 ```
 
+## Linear regressions 
+```{r, fig.width=9, fig.height=1.5}
+# LINEAR REGRESSIONS SYSTEMS
+for (ch in channel.list[c(2,3,5,6)]) {
+  print(
+    knew.molten2 %>%
+      filter(UNITS == "density") %>%
+      filter(BRIGHTNESS == 'total') %>%
+      filter(VALENCE == 'SHOCK') %>%
+      filter(!(EXPT =='YOUNG' & CONTEXT=='AA' & VALENCE == 'SHOCK' & FREEZE < 30)) %>% # removes young bad freezers
+      filter(CHANNEL == ch) %>%
+      group_by(ID, System, GROUP, EXPT, CHANNEL, FREEZE, variable) %>%
+      summarize(weighted = weighted.mean(value, ROIAreapx)) %>%
+      ggplot() + aes(FREEZE, weighted) + 
+      stat_summary(fun.y="mean", geom="point") +
+      facet_wrap(EXPT~System, scales="free", ncol=16) + geom_smooth(method="lm") +
+      ggtitle(paste("Total brain density vs freezing, total cells, shock animals only,", ch)) +
+      theme_minimal() 
+  )
+}
+
+```
+
+## Stats for Systems Linear Regressions
+```{r}
+ # GET THE STATS
+sys.lr = knew.molten2 %>%
+  filter(UNITS == "density") %>%
+  filter(BRIGHTNESS == 'total') %>%
+  filter(VALENCE == 'SHOCK') %>%
+  # filter(!(EXPT =='YOUNG' & CONTEXT=='AA' & VALENCE == 'SHOCK' & FREEZE < 30)) %>% # removes young bad freezers
+  
+  group_by(CHANNEL, EXPT, GROUP, ID, FREEZE, System) %>%
+  summarize(weighted = weighted.mean(value, ROIAreapx)) %>%
+  
+  group_by(CHANNEL, EXPT, System) %>%
+  do(tidy(lm(data=., formula = weighted ~ FREEZE))) %>%
+  filter(!term=="(Intercept)") %>%
+  mutate(p.value = p.adjust(p.value, method="bonferroni", n=108)) %>%
+  mutate(sig = 
+           case_when(
+             p.value < 0.0005 ~ "***",
+             p.value < 0.005 ~ "**", 
+             p.value < 0.05 ~ "*"
+           ))
+
+
+# positive or negative
+sys.lr %>%
+  filter(CHANNEL %in% c("H2BGFP","NormOL", "ArcIHC")) %>% # omit DAPI/OL/GFAP channels for clarity
+  # dcast(., CHANNEL+EXPT ~ System, value.var="sig") %>%
+  ggplot() + aes(EXPT, System, fill=estimate/abs(estimate), label=round(estimate,0)) + geom_tile() + facet_wrap(~CHANNEL) + 
+  scale_fill_continuous(limits=c(-1,1), low="red", high="green", na.value="white") + 
+  ggtitle("Slopes from linear regression (red is negative)") +
+  theme_light()
+
+# P VALUES
+sys.lr %>%
+  filter(CHANNEL %in% c("H2BGFP","NormOL", "ArcIHC")) %>% # omit DAPI/OL/GFAP channels for clarity
+  # dcast(., CHANNEL+EXPT ~ System, value.var="sig") %>%
+  ggplot() + aes(EXPT, System, fill=p.value, label=sig) + geom_tile() + facet_wrap(~CHANNEL) + 
+  scale_fill_continuous(limits=c(0,0.05), low="dark red", high="white", na.value="white") + 
+  ggtitle("Signifiance scores from linear regression (Bonferroni corrected)") +
+  theme_light() + geom_label(label.size=0, color="white")
+```
+
+
+# REGIONS
+
+## Calculate the means for each ROI
+Find the code from the other scripts you wrote. 
+
+```{r,fig.width = 9, fig.height = 3}
+
+for (ch in channel.list[c(2,3,5,6)]) {
+  print(
+    knew.molten2 %>%
+      filter(UNITS == "density" & BRIGHTNESS == 'total') %>%
+      filter(CHANNEL == ch) %>%
+      filter(!(EXPT =='YOUNG' & CONTEXT=='AA' & VALENCE=='SHOCK' & FREEZE < 30)) %>% # removes young bad freezers
+      ggplot() + aes(GROUP, value, color=EXPT) + 
+      stat_summary(fun.y = "mean", geom="point") + 
+      stat_summary(fun.data = "mean_se", geom="errorbar", aes(width=0.3)) + 
+      facet_wrap(~SubROI_SubroiAGGR, scales="free", ncol=19) + 
+      ggtitle(paste(c("Densities, shock animals only, removed poor performers, "),ch,", TOTAL cells")) +
+      theme_light() + rx 
+  )
+}
+
+
+```
+
+## Heatmaps for ROI
+
+```{r, fig.width=7.5, fig.height=2}
+
+for (bright in c('low', 'mid', 'hi', 'total')[4]) {
+  for (ch in channel.list) {
+    print(
+    knew.molten2 %>%
+      filter(UNITS == "density") %>%
+      filter(BRIGHTNESS == bright) %>%
+      filter(CHANNEL == ch) %>%
+      ddply(.(SubROI_SubroiAGGR, CHANNEL), transform, z = scale(value)) %>%
+      ggplot() + aes(GROUP, SubROI_SubroiAGGR, z=z, fill=z) +
+      geom_tile() + scale_fill_gradient2(low='dark blue', mid='white', high='red') +
+      facet_wrap(~EXPT, ncol=1) + rx + coord_flip() +
+      ggtitle(paste("Scaled density across all animals,",bright, ch)) +
+      theme_light()
+  )
+  }
+}
+```
+
+
+
+## Linear regressions for ROI
+```{r, fig.width=12, fig.height=9}
+
+for (ch in channel.list[c(2,3,5,6)]) {
+  print(
+    knew.molten2 %>%
+      filter(UNITS == "density") %>%
+      filter(BRIGHTNESS == 'total') %>%
+      filter(VALENCE == 'SHOCK') %>%
+      filter(!(EXPT =='YOUNG' & CONTEXT=='AA' & VALENCE == 'SHOCK' & FREEZE < 30)) %>% # removes young bad freezers
+      filter(CHANNEL == ch) %>%
+      ggplot() + aes(FREEZE, value) + 
+      stat_summary(fun.y="mean", geom="point") +
+      facet_wrap(EXPT~SubROI_SubroiAGGR, scales="free", ncol=16) + geom_smooth(method="lm") +
+      ggtitle(paste("Subregion vs freezing, total cells, shock animals only,", ch)) +
+      theme_minimal() 
+  )
+}
+
+```
+
+## Stats for linear regressions ROI
+Looks like none of these subregions correlate with freezing... how is it possible that Systems do?
+```{r, fig.height = 5, fig.width=3}
+ # GET THE STATS
+roi.lr = knew.molten2 %>%
+  filter(UNITS == "density") %>%
+  filter(BRIGHTNESS == 'total') %>%
+  filter(VALENCE == 'SHOCK') %>%
+  # filter(!(EXPT =='YOUNG' & CONTEXT=='AA' & VALENCE == 'SHOCK' & FREEZE < 30)) %>% # removes young bad freezers
+  
+  group_by(CHANNEL, EXPT, GROUP, ID, SubROI_SubroiAGGR) %>%
+  mutate(weighted = weighted.mean(value, ROIAreapx)) %>%
+  
+  group_by(CHANNEL, EXPT, SubROI_SubroiAGGR) %>%
+  do(tidy(lm(data=., formula = weighted ~ FREEZE))) %>%
+  filter(!term=="(Intercept)") %>%
+  mutate(p.value = p.adjust(p.value, method="bonferroni", n=(77*3*2))) %>%
+  mutate(sig = 
+           case_when(
+             p.value < 0.0005 ~ "***",
+             p.value < 0.005 ~ "**", 
+             p.value < 0.05 ~ "*"
+           ))
+
+
+# positive or negative
+roi.lr %>%
+  filter(CHANNEL %in% c("H2BGFP","NormOL", "ArcIHC")) %>% # omit DAPI/OL/GFAP channels for clarity
+  # dcast(., CHANNEL+EXPT ~ System, value.var="sig") %>%
+  ggplot() + aes(EXPT, SubROI_SubroiAGGR, fill=estimate/abs(estimate), label=round(estimate,0)) + geom_tile() + facet_wrap(~CHANNEL) + 
+  scale_fill_continuous(limits=c(-1,1), low="red", high="green", na.value="white") + 
+  ggtitle("Slopes from linear regression (red is negative)") +
+  theme_light()
+
+# P VALUES
+roi.lr %>%
+  filter(CHANNEL %in% c("H2BGFP","NormOL", "ArcIHC")) %>% # omit DAPI/OL/GFAP channels for clarity
+  # dcast(., CHANNEL+EXPT ~ System, value.var="sig") %>%
+  ggplot() + aes(EXPT, SubROI_SubroiAGGR, fill=p.value, label=sig) + geom_tile() + facet_wrap(~CHANNEL) + 
+  scale_fill_continuous(limits=c(0,0.05), low="dark red", high="white", na.value="white") + 
+  ggtitle("Signifiance scores from linear regression (Bonferroni corrected)") +
+  theme_light() + geom_label(label.size=0, color="white") 
+```
 
